src/index.css
/* pretty it up ⊹╰(⌣ʟ⌣)╯⊹  */

:root {
    /* EOTN global colours */
    --EOTNred: #f00;
    --EOTNwhite: #DFDADA;
    /* screen max breakpoints */
    --breakpoint-s: 768px;
    --breakpoint-m: 992px;
    --breakpoint-l: 1200px;
}

/* FRONT PAGE GENERAL STYLES */

html {
    -webkit-box-sizing: border-box !important;
	-moz-box-sizing: border-box !important;
	-ms-box-sizing: border-box !important;
	box-sizing: border-box !important;
  }
  *, *:before, *:after {
    -webkit-box-sizing: inherit;
	-moz-box-sizing: inherit;
	-ms-box-sizing: inherit;
	box-sizing: inherit;
  }
  
body {
    margin: 0;
    padding: 0;
    line-height: 1.5;
    background-color: black;
    color: var(--EOTNwhite);
}

::selection {
    background: var(--EOTNred);
}

body {
    font-family: "Josefin Sans", Verdana, Geneva, Tahoma, sans-serif;
    font-weight: 200;
}

/* FRONT PAGE 
- LAYOUT STYLES FOR DESKTOP */

.fullpage__container {
    width: 100%;
    height: 100vh;
}

.main__container {
    width: 100%;
    height: 100%;
    display: flex;
}

.full-height-layout {
    height: 100%;
}

.main__left-area,
.main__right-area {
	display: flex;
	align-content: center;
}

.main__left-area {
    width: 25vw;
    flex-grow: 3;
}

.main__middle-area {
    width: clamp(30vw, 45vw, 50vw);
    flex-grow: 4;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    flex-shrink: 2;
}

.logo__wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.logo__img {
    height: auto;
    max-width: 100%;
    margin: 0.5em auto;
}

.logo__title {
    font-size: clamp(0.8rem, 1.2vw, 1.5rem);
    text-align: center;
    padding-bottom: 1em;
    font-weight: 400;
}

.socials__wrapper {
    display: flex;
    max-height: clamp(20px, 30px, 40px);
    margin: 0 auto;
}

.socials__img {
    margin: 0;
    padding: 0 0.666rem;;
    max-height: clamp(20px, 30px, 40px);
}

.main__right-area {
    width: 25vw;
    justify-content: flex-end;
    flex-grow: 3;
}

/* LINKS */

.main__left-area ul,
.main__right-area ul {
    padding: 0 1em 0 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    list-style-type: none;
}

.main__right-area ul {
    text-align: right;
}

.main__left-area a, 
.main__right-area a {
    font-weight: 200;
    display: block;
    text-decoration: none;
    padding: 1em 1em;
    color: #DFDADA;
    font-size: larger;
}

.main__left-area a:hover, .main__left-area a:focus,
.main__right-area a:hover, .main__right-area a:focus {
    text-shadow: 1px 1px 3px var(--EOTNwhite);
    /* 0 -1px 1px var(--EOTNred); */
    /* optional additional colour */
}


/* FRONT PAGE 
FOOTER DESKTOP */

footer {
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 3rem;
    display: flex;
    justify-content: center;
    align-content: start;
}

.footer__text-area {
    padding-bottom: 1rem;
    font-weight: 200;
    font-size: smaller;
}

.footer__text-area p {
    margin: 0;
    padding: 0;
}

/* FRONT PAGE 
- MOBILES or SCREENS IN PORTRAIT MODE */

@media screen and (orientation: portrait), screen and (max-width: var(--breakpoint-s)) {
.fullpage__container {
    width: 100%;
    height: auto;
}

.main__container {
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
}

.main__left-area,
.main__right-area {
    display: inline-block;
    flex-shrink: 3;
    flex-grow: 2;
    width: 40%;
    height: 40%;
}

.main__left-area {
    order: 2;
}

.main__right-area {
    order: 4;
}

/* LINKS */

.main__left-area ul {
    text-align: right;
}

.main__right-area ul {
    text-align: left;
}

.main__left-area ul,
.main__right-area {
    padding: 0 0.5em 0 0.5em;
}

.main__middle-area {
    width: 100%;
    height: 50%;
    order: 1;
    margin: 2rem auto;
}

/* DIVIDER LINE */
.divider {
    order: 3;
    width: 1px;
    height: auto;
    margin: 1.666rem;
    background-color: var(--EOTNwhite);
    opacity: 66.6%;
}

.main__left-area a, 
.main__right-area a {
    font-weight: 200;
    display: block;
    text-decoration: none;
    padding: .5em 0.5em;
    color: #DFDADA;
    font-size: larger;
}

footer {
    position: relative;
    bottom: 0;
    margin-top: 1rem;
}



}

/* TODO */
/* FROM TRELLO:
uwagi do strony głównej z adresu https://flower-ebony-thunder.glitch.me/index.html

Zwróć uwagę na to co napisali w PageSpeed Insights
https://developers.google.com/speed/pagespeed/insights/?url=https%3A%2F%2Fflower-ebony-thunder.glitch.me%2Findex.html

Może dasz radę coś zrobić z tymi webfontami co się tak ładują? To by może jeszcze szybciej się załadowało. Z tego co kojarzę to można coś powalczyć ze sposobem ich ładowania, aby nie blokowały renderowania, ale to już zerknij sama. Ten wynik 96/100 to jest i tak petarda! Będzie nieco gorzej jak dorzucę foty dobrej jakości, ale jest nieźle :)

Menu lewa i prawa na desktopie - odsuń około 50px od krawędzi odpowiednio lewej i prawej.

MOBILE: dajmy logo, hasło, ikonki do góry bardziej, a linki do portfolio i blogów będą pod nimi - tak jak rozmawialiśmy. Jeśli nadal będzie kicha to można zrobić najpierw linki do portfolio 5 sztuk, a pod nimi linki do blog postów. Nie wiem jak to się zachowa wtedy na mobile, gdy będzie długi tytuł blog posta?
*/

